--- a/html/index.html
+++ b/html/index.html
@@ -1,9 +1,10 @@
 <!doctype html>
 <html>
   <head>
-    <title>Hello, World!</title>
+    <title>Good night, World!</title>
   </head>
   <body>
     <script src="main.js"></script>
+    <h1>Let us see some text</h1
   </body>
 </html>
