--- a/html/index.html
+++ b/html/index.html
@@ -5,6 +5,6 @@
   </head>
   <body>
     <script src="main.js"></script>
-    <h1>Let us see some more text</h1
+    <h1>Let us see less text</h1
   </body>
 </html>
