--- a/html/index.html
+++ b/html/index.html
@@ -4,7 +4,7 @@
     <title>Good night, World!</title>
   </head>
   <body>
-    <script src="main.js"></script>
+    <script src="js/main.js"></script>
     <h1>Let us see less text</h1
   </body>
 </html>
