--- a/html/login.html
+++ b/html/login.html
@@ -33,7 +33,7 @@
         </fieldset>
     </form>
 
-    <script src="main.js"></script>
+    <script src="js/main.js"></script>
 
 </body>
 </html>
