--- a/html/shopping.html
+++ b/html/shopping.html
@@ -41,6 +41,7 @@
         </fieldset>
     </form>
     <script src="js/main.js"></script>
+    <script>modern_cljs.shopping.init();</script>
 </body>
 
 </html>
