--- a/html/shopping.html
+++ b/html/shopping.html
@@ -12,7 +12,7 @@
 
 <body>
     <!-- shopping.html -->
-    <form action="" method="post" id="shoppingForm" novalidate>
+    <form id="shoppingForm" novalidate>
         <legend> Shopping Calculator</legend>
         <fieldset>
             <div>
@@ -36,7 +36,7 @@
                 <input type="text" name="total" id="total" value="0.00">
             </div>
             <div>
-                <input type="submit" value="Calculate" id="submit">
+                <input type="button" value="Calculate" id="calc">
             </div>
         </fieldset>
     </form>
