--- a/html/index.html
+++ b/html/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <!-- login.html -->
-    <form action="login.php" method="post" id="loginForm" novalidate >
+    <form id="loginForm" novalidate >
         <fieldset>
             <legend>Login</legend>
 
@@ -27,7 +27,7 @@
 
             <div>
               <label for="submit"></label>
-              <input type="submit" value="Login &rarr;" id="submit"/>
+              <input type="button" value="Login &rarr;" id="validate"/>
             </div>
 
         </fieldset>
