--- a/html/index.html
+++ b/html/index.html
@@ -9,25 +9,31 @@
     <link rel="stylesheet" href="css/styles.css"/>
 </head>
 <body>
-    <!-- login.html -->
-    <form id="loginForm" novalidate >
+    <!-- Script 2.2 - login.html -->
+    <form action="login" method="post" id="loginForm" novalidate>
         <fieldset>
             <legend>Login</legend>
-
             <div>
               <label for="email">Email Address</label>
-              <input type="email" name="email" id="email" required />
-
+              <input type="email" name="email" id="email"
+                     placeholder="email"
+                     title="Type a well-formed email!"
+                     pattern="^[_a-z0-9-]+(\.[_a-z0-9-]+)*@[a-z0-9-]+(\.[a-z0-9-]+)*(\.[a-z]{2,4})$"
+                     required>
             </div>
-
+            
             <div>
               <label for="password">Password</label>
-              <input type="password" name="password" id="password" required />
+              <input type="password" name="password" id="password"
+                     placeholder="password"
+                     title="Password is from 4 to 16 chars with 1 number!"
+                     pattern="^(?=.*\d).{4,16}$"
+                     required>
             </div>
 
             <div>
               <label for="submit"></label>
-              <input type="button" value="Login &rarr;" id="validate"/>
+              <input type="submit" value="Login &rarr;" id="validate"/>
             </div>
 
         </fieldset>
